tests/checker/diagnostics/0404_modules_nested_value_mismatch_01.ml
module M : sig
  module Inner : sig
    val x : bool
  end
end = struct
  module Inner = struct
    let x = 0
  end
end
